Resolve scrollbar and z-index issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,4 +5,7 @@
         height: calc(100% - 80px);
     }
 }
+::-webkit-scrollbar {
+    display: none;
+}
 
