--- a/src/components/navBar/styles.scss
+++ b/src/components/navBar/styles.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
-    position: sticky;
+    position: relative;
 
     &__container{
         display: flex;
@@ -65,6 +65,7 @@
         justify-content: center;
         width: 100%;
         position: absolute;
+        z-index: 999;
         top: 80px;
         left: -110%;
         opacity: 1;
